# django_deferred_save

./: .gitignore  manage.py  pyproject.toml
deferred_save/: managers.py  models.py
deferred_save/migrations/: 0001_initial.py  0002_auto_20200401_0641.py  0003_comment_parent.py
deferred_save/test/: test.py
django_deferred_save/: asgi.py  settings.py  urls.py  wsgi.py
