[tool.poetry]
name = "django_deferred_save"
version = "0.1.0"
description = ""
authors = ["David Grant <davidgrant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
